Fix alignment issue

--- a/src/pages/EntityDetails/_entity-details.scss
+++ b/src/pages/EntityDetails/_entity-details.scss
@@ -186,7 +186,6 @@
     td {
       padding-left: 1rem;
       padding-right: 1rem;
-      white-space: nowrap;
     }
 
     tr {
